style.css description

--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: UW Team Formation - Team
-Theme URI: http://teamformation.herokuapp.com
+Theme Name: IsBlank
+Theme URI: http://isblank.herokuapp.com
 Author: MadeByChip
 Author URI: http://madebychip.com
-Description: UW Team Formation website helps to match startup team from Environmental Innovation Challenge and Business Plan Competition with talented individuals.
-Version: 1.1
+Description: IsBlank is a social platform for friend's feedback.
+Version: 1.0
 */
 
 html, body, div, span, applet, object, iframe,
