--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -325,7 +325,7 @@ pre {
 	right: 0;
 	z-index: 500;
 	padding: 50px 0;
-	background-color: #423869;
+	background-color: #ffffff;
 	
 
 	-webkit-transition: all 300ms linear;
