--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -1227,6 +1227,7 @@ background-clip: padding-box;
 #sidebar {
 	width: 360px;
 	float: right;
+	display:none;
 }
 
 .sidebar-widgets,
@@ -1422,7 +1423,7 @@ background-clip: padding-box;
 }
 
 #main-content {
-	width: 745px;
+	width: 1140px;
 	float: left;
 }
 
@@ -1665,6 +1666,13 @@ img.aligncenter {
 	padding: 0 0 16px;
 }
 
+img.attachment-medium {
+overflow: hidden;
+width:360px;
+height:360px;
+position: relative;
+}
+
 .entry-content h1 {
 	font-size: 34px;
 	line-height: 40px;
@@ -1716,6 +1724,7 @@ img.aligncenter {
 #respond {
 	overflow: hidden;
 	padding: 0 0 35px;
+	clear: left;
 }
 
 #comments h2 {
@@ -1813,7 +1822,9 @@ img.aligncenter {
 
 #comments .commentlist li {
 	border-bottom: 1px solid #dbd9d4;
-	margin: 0 0 2px;
+	margin: 0 10px 2px;
+	float: left;
+	width: 360px;
 }
 
 #comments .commentlist article {
@@ -1842,7 +1853,7 @@ img.aligncenter {
 }
 
 #comments .commentlist .comment-content {
-	padding: 0 0 0 72px;
+	padding: 0 0 0 0px;
 }
 
 #comments .commentlist .fn {
