--- a/wp-content/themes/isblank/css/responsive.css
+++ b/wp-content/themes/isblank/css/responsive.css
@@ -444,7 +444,7 @@
 	#home-page-featured h1,
 	#title-image h1 {
 		top: 30%;
-		font: 700 14px/24px 'Lato', sans-serif;
+		font: 700 14px/24px 'Roboto', sans-serif;
 	}
 
 	#home-page-featured h1 span,
