--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -962,7 +962,7 @@ body.fixed-header #header {
 	border: 0;
 	background: none;
 	font-size: 12px;
-	color: #939393;
+	color: #ffffff;
 	height: 28px;
 	line-height: 28px;
 	text-transform: uppercase;
