--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -979,7 +979,7 @@ body.fixed-header #header {
 }
 
 #searchsubmit {
-	color: #939393;
+	color: #ffffff;
 	font-size: 18px;
 }
 
@@ -994,8 +994,8 @@ body.fixed-header #header {
 
 .submit-content input[type=text] {
 	font-size: 12px;
-	color: #565656;
-	border: 1px solid #dbd9d4;
+	color: #ffffff;
+	border: 1px solid #ffffff;
 	letter-spacing: 1px;
 	width: 200px;
 	padding: 5px 9px;
@@ -1005,7 +1005,7 @@ body.fixed-header #header {
 }
 
 .submit-content input[type=text]::-webkit-input-placeholder {
-	color: #565656;
+	color: #ffffff;
 }
 
 .submit-content input[type=text]::-moz-placeholder {
