--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -950,6 +950,7 @@ body.fixed-header #header {
 	top: 70px;
 	right: 30px;
     color:#ffffff;
+    padding: 8px 20px 5px 20px;
 }
 
 .entry-content .search-box {
@@ -1070,7 +1071,7 @@ body.fixed-header #header {
 }
 
 #projects {
-	border-top: 4px double #dbd9d4;
+	margin-top:60px;
 	padding: 42px 0 2px;
 }
 
@@ -3111,7 +3112,7 @@ font-family: Raleway;
 #home-page-featured {
 height: 300px;
 background-position-y: 400px;
-background-image: url("http://uwteamformation.com.s3.amazonaws.com/2014/02/purple_blurred_backgrounds.jpg");
+background-image: url("http://isblank.s3.amazonaws.com/2014/03/map.png");
 }
 
 #home-page-featured h1 span {
