--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -3112,7 +3112,7 @@ font-family: Raleway;
 #home-page-featured {
 height: 300px;
 background-position-y: 400px;
-background-image: url("http://isblank.s3.amazonaws.com/2014/03/map.png");
+background-image: url("http://isblank.s3.amazonaws.com/2014/03/map2.png");
 }
 
 #home-page-featured h1 span {
