--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -191,7 +191,7 @@ select {
 	font-family: 'Roboto';
 	font-size: 12px;
 	color: #565656;
-	border: 1px solid #dbd9d4;
+	border: 1px solid#ffffff;
 	letter-spacing: 1px;
 	width: 200px;
 	padding: 5px 9px;
@@ -932,10 +932,10 @@ body.fixed-header #header {
 }
 
 .div-c {
-	border-top: 1px solid #dbd9d4;
+	border-top: 1px solid#ffffff;
 	padding: 1px;
 	margin: 40px 0 58px;
-	border-bottom: 1px solid #dbd9d4;
+	border-bottom: 1px solid#ffffff;
 	clear: both;
 }
 
@@ -990,7 +990,7 @@ body.fixed-header #header {
 
 .submit-content select {
 	height: 33px;
-	border: 1px solid #dbd9d4;
+	border: 1px solid#ffffff;
 }
 
 .submit-content input[type=text] {
@@ -1054,10 +1054,10 @@ body.fixed-header #header {
 }
 
 .submit-content .div {
-	border-top: 1px solid #dbd9d4;
+	border-top: 1px solid#ffffff;
 	padding: 1px;
 	margin: 0 0 20px;
-	border-bottom: 1px solid #dbd9d4;
+	border-bottom: 1px solid#ffffff;
 }
 
 .submit-content fieldset .div {
@@ -1253,7 +1253,7 @@ background-clip: padding-box;
 }
 
 #sidebar .widget {
-	border-bottom: 4px double #dbd9d4;
+	border-bottom: 4px double#ffffff;
 	padding: 20px;
 }
 
@@ -1297,7 +1297,7 @@ background-clip: padding-box;
 	width: 100%;
 	overflow: hidden;
 	float: none;
-	border: 1px solid #dbd9d4;
+	border: 1px solid#ffffff;
 
 	-webkit-box-sizing: border-box;
 	   -moz-box-sizing: border-box;
@@ -1455,7 +1455,7 @@ background-clip: padding-box;
 	overflow: hidden;
 	padding: 18px 0 11px;
 	margin: 0 0 3px;
-	border-bottom: 4px double #dbd9d4;
+	border-bottom: 4px double#ffffff;
 }
 
 #main-content .post-meta.campaign-meta {
@@ -1663,7 +1663,7 @@ img.aligncenter {
 }
 
 .entry-content .div {
-	border-bottom: 1px solid #dbd9d4;
+	border-bottom: 1px solid#ffffff;
 	margin: 35px 0 12px;
 }
 
@@ -1671,9 +1671,9 @@ img.aligncenter {
 	font-size: 16px;
 	line-height: 32px;
 	padding: 15px 48px 0;
-	border-top: 1px solid #dbd9d4;
+	border-top: 1px solid#ffffff;
 	margin: 15px 0 20px;
-	border-bottom: 1px solid #dbd9d4;
+	border-bottom: 1px solid#ffffff;
 	font-weight: bold;
 }
 
@@ -1747,7 +1747,7 @@ position: relative;
 	font-size: 22px;
 	letter-spacing: 2px;
 	line-height: 26px;
-	border-bottom: 1px solid #dbd9d4;
+	border-bottom: 1px solid#ffffff;
 	padding: 0 0 14px;
 	color: #515151;
 }
@@ -1776,7 +1776,7 @@ position: relative;
 #respond textarea {
 	font-size: 12px;
 	color: #565656;
-	border: 1px solid #dbd9d4;
+	border: 1px solid#ffffff;
 	width: 100%;
 	padding: 5px 9px;
 	height: 187px;
@@ -1819,12 +1819,12 @@ position: relative;
 
 #comments .commentlist {
 	margin: 2px 0 0;
-	border-top: 1px solid #dbd9d4;
+	border-top: 1px solid#ffffff;
 	padding: 10px 0;
 }
 
 #comments .commentlist .children {
-	border-top: 1px solid #dbd9d4;
+	border-top: 1px solid#ffffff;
 }
 
 #comments .commentlist .children article {
@@ -1836,14 +1836,14 @@ position: relative;
 }
 
 #comments .commentlist li {
-	border-bottom: 1px solid #dbd9d4;
+	border-bottom: 1px solid#ffffff;
 	margin: 0 10px 2px;
 	float: left;
 	width: 360px;
 }
 
 #comments .commentlist article {
-	border-bottom: 1px solid #dbd9d4;
+	border-bottom: 1px solid#ffffff;
 	overflow: hidden;
 	padding: 20px 0 40px;
 	margin: 0 0 2px;
@@ -1944,14 +1944,14 @@ position: relative;
 	margin: 24px 0;
 	margin: 1.714285714rem 0;
 	padding: 20px 0;
-	border-top: 4px double #dbd9d4;
-	border-bottom: 4px double #dbd9d4;
+	border-top: 4px double#ffffff;
+	border-bottom: 4px double#ffffff;
 }
 
 .contact-campaign-author,
 .campaign-updates-title {
 	margin: 12px 0;
-	border-bottom: 4px double #dbd9d4;
+	border-bottom: 4px double#ffffff;
 }
 
 .atcf-submit-campaign h3:first-child,
@@ -2036,7 +2036,7 @@ position: relative;
 	margin: 0;
 	padding: 0;
 	list-style: none;
-	border: 1px solid #dbd9d4;
+	border: 1px solid#ffffff;
 	padding: 20px;
 	overflow: auto;
 }
@@ -2056,8 +2056,8 @@ position: relative;
 .atcf-edd-terms-wrap {
 	margin: 0 0 20px;
 	padding: 20px 0;
-	border-top: 4px double #dbd9d4;
-	border-bottom: 4px double #dbd9d4;
+	border-top: 4px double#ffffff;
+	border-bottom: 4px double#ffffff;
 }
 
 .entry-content .atcf-submit-campaign-tos {
@@ -2071,7 +2071,7 @@ position: relative;
 nav.navigation {
 	margin-top: 40px;
 	padding-top: 16px;
-	border-top: 4px double #dbd9d4;
+	border-top: 4px double#ffffff;
 }
 
 a.post-edit-link,
@@ -2162,7 +2162,7 @@ a.comment-edit-link {
 	clear: both;
 	margin-top: 20px;
 	padding-top: 20px;
-	border-top: 4px double #dbd9d4
+	border-top: 4px double#ffffff
 }
 
 .entry-share {
@@ -2171,7 +2171,7 @@ a.comment-edit-link {
 	color: #565656;
 	vertical-align: top;
 	line-height: 24px;
-	border-bottom: 4px double #dbd9d4;
+	border-bottom: 4px double#ffffff;
 	padding: 18px 0 14px;
 	margin-bottom: 30px;
 }
@@ -2414,8 +2414,8 @@ a.page-numbers:hover {
 
 	margin: 0 0 0.5em;
 	padding: 20px 0;
-	border-top: 4px double #dbd9d4;
-	border-bottom: 4px double #dbd9d4;
+	border-top: 4px double#ffffff;
+	border-bottom: 4px double#ffffff;
 }
 
 #edd_checkout_form_wrap p#edd-anon-wrap {
@@ -2440,7 +2440,7 @@ a.page-numbers:hover {
 
 .single-reward-levels .edd_price_options li {
 	padding: 25px;
-	border-bottom: 4px double #dbd9d4;
+	border-bottom: 4px double#ffffff;
 }
 
 .single-reward-levels .edd_price_options.active li:not(.inactive):hover {
