--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -3088,8 +3088,7 @@ background-image: url("http://isblank.s3.amazonaws.com/2014/03/map2.png");
 }
 
 
-
-#home-page-featured h1 span, #title-image h1 span, .bar span, input[type=submit]:not(#searchsubmit), .btn-green, .entry-content .button:not(.add_media), .edd-add-to-cart {
+#title-image h1 span, .bar span, input[type=submit]:not(#searchsubmit), .btn-green, .entry-content .button:not(.add_media), .edd-add-to-cart {
  background: rgba(255,255,255,0.05);
 }
 
