--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -644,25 +644,25 @@ body.fixed-header #header {
 }
 
 .title.pattern-1 {
-	background: url(http://uwteamformation.com.s3.amazonaws.com/2014/02/4.jpg);
+	background-color: #252525;
 	height: 250px;
 	background-position-y: 450px;
 }
 
 .title.pattern-2 {
-	background: url(http://uwteamformation.com.s3.amazonaws.com/2014/02/4.jpg);
+	background-color: #252525;
 	height: 250px;
 	background-position-y: 450px;
 }
 
 .title.pattern-3 {
-	background: url(http://uwteamformation.com.s3.amazonaws.com/2014/02/3.jpg);
+	background-color: #252525;
 	height: 250px;
 	background-position-y: 450px;
 }
 
 .title.pattern-4 {
-	background: url(http://uwteamformation.com.s3.amazonaws.com/2014/02/3.jpg);
+	background-color: #252525;
 	height: 250px;
 	background-position-y: 450px;
 }
@@ -3149,7 +3149,7 @@ top: -25px;
 0% { -ms-transform: rotate(0deg);}
 100% { -ms-transform: rotate(360deg);}
 }@media only screen and (max-width:600px){.bg-stars{background-color:#2c3e50;background-image:none}}</style>
-<style>.bg-stars{background-image:url(http://1-ps.googleusercontent.com/x/s.hackillinois.appspot.com/www.hackillinois.org/img/xstarbackground.compressed.jpg.pagespeed.ic.3VaPBGzmpe.jpg);background-size:cover;z-index:-100;background-attachment:fixed;background-color:#2c3e50}.t-centered{text-align:center}.constellations{min-height:120%;margin-top:-10%;display:block;position:fixed;z-index:0;opacity:.6;-webkit-animation:spin 250s infinite linear;-moz-animation:spin 250s infinite linear;-o-animation:spin 250s infinite linear;-ms-animation:spin 250s infinite linear}.splash{position:relative;z-index:100}.logo-main-svg{width:260px;margin:0 auto;margin-top:150px;min-height:125px;max-width:100%}-moz-border-radius:3px;-webkit-border-radius:3px;border:none;-webkit-appearance:none;-moz-appearance:none;text-decoration:none;border:1px solid #ef3e36;text-transform:uppercase;margin-right:4px}p.apply-info{font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;font-size:12px;background:rgba(255,255,255,.8);color:#333;max-width:245px;width:100%;margin:0 auto;-moz-border-radius:3px;-webkit-border-radius:3px;border:1px solid #ef3e36;-webkit-appearance:none;-moz-appearance:none;text-decoration:none;padding:0;padding-left:10px;padding-right:10px;padding-top:10px;margin-bottom:25px;padding-bottom:10px;display:none}.squish{width:90%}a.apply-btn:visited,a.apply-btn:active,a.apply-btn:hover{color:#fff}a.apply-btn:hover,a.volunteer-btn:hover{background-color:#ef4d36}.reg-form{display:block;margin-top:40px;margin-bottom:150px}.reg-success{display:none;margin-bottom:150px}.reg-success>h3{margin-top:40px;font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;text-transform:none;font-weight:normal;font-size:20px;color:#fff}.content-container{margin:0 auto;z-index:1000}.content{-moz-border-radius:3px;-webkit-border-radius:3px;background:rgba(255,255,255,.8);border:none;border:1px solid rgba(255,255,255,.9);margin:10px auto;padding-bottom:20px;z-index:1000;max-width:840px}.content-container.top{}#sponsors{text-align:center;width:100%}.sponsor-supernova{display:inline-block;margin:0 auto;width:80%;margin-bottom:20px}.sponsor{display:inline-block;margin-left:20px;margin-right:20px;margin-bottom:10px;margin-top:10px;opacity:.5;filter:alpha(opacity=50);vertical-align:middle;filter:grayscale(100%);-webkit-filter:grayscale(100%);-ms-filter:grayscale(100%);-o-filter:grayscale(100%);filter:gray;filter:url(data:image/svg+xml;utf8,<svg\ xmlns=\'http://www.w3.org/2000/svg\'><filter\ id=\'grayscale\'><feColorMatrix\ type=\'matrix\'\ values=\'0.3333\ 0.3333\ 0.3333\ 0\ 0\ 0.3333\ 0.3333\ 0.3333\ 0\ 0\ 0.3333\ 0.3333\ 0.3333\ 0\ 0\ 0\ 0\ 0\ 1\ 0\'/></filter></svg>#grayscale)}.sponsor:hover{filter:none;-webkit-filter:grayscale(0%);-ms-filter:grayscale(0%);-o-filter:grayscale(0%);-moz-transform:rotate(0);opacity:1;filter:alpha(opacity=1)}}@-webkit-keyframes spin {
+<style>.bg-stars{background-size:cover;z-index:-100;background-attachment:fixed;background-color:#2c3e50}.t-centered{text-align:center}.constellations{min-height:120%;margin-top:-10%;display:block;position:fixed;z-index:0;opacity:.6;-webkit-animation:spin 250s infinite linear;-moz-animation:spin 250s infinite linear;-o-animation:spin 250s infinite linear;-ms-animation:spin 250s infinite linear}.splash{position:relative;z-index:100}.logo-main-svg{width:260px;margin:0 auto;margin-top:150px;min-height:125px;max-width:100%}-moz-border-radius:3px;-webkit-border-radius:3px;border:none;-webkit-appearance:none;-moz-appearance:none;text-decoration:none;border:1px solid #ef3e36;text-transform:uppercase;margin-right:4px}p.apply-info{font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;font-size:12px;background:rgba(255,255,255,.8);color:#333;max-width:245px;width:100%;margin:0 auto;-moz-border-radius:3px;-webkit-border-radius:3px;border:1px solid #ef3e36;-webkit-appearance:none;-moz-appearance:none;text-decoration:none;padding:0;padding-left:10px;padding-right:10px;padding-top:10px;margin-bottom:25px;padding-bottom:10px;display:none}.squish{width:90%}a.apply-btn:visited,a.apply-btn:active,a.apply-btn:hover{color:#fff}a.apply-btn:hover,a.volunteer-btn:hover{background-color:#ef4d36}.reg-form{display:block;margin-top:40px;margin-bottom:150px}.reg-success{display:none;margin-bottom:150px}.reg-success>h3{margin-top:40px;font-family:'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;text-transform:none;font-weight:normal;font-size:20px;color:#fff}.content-container{margin:0 auto;z-index:1000}.content{-moz-border-radius:3px;-webkit-border-radius:3px;background:rgba(255,255,255,.8);border:none;border:1px solid rgba(255,255,255,.9);margin:10px auto;padding-bottom:20px;z-index:1000;max-width:840px}.content-container.top{}#sponsors{text-align:center;width:100%}.sponsor-supernova{display:inline-block;margin:0 auto;width:80%;margin-bottom:20px}.sponsor{display:inline-block;margin-left:20px;margin-right:20px;margin-bottom:10px;margin-top:10px;opacity:.5;filter:alpha(opacity=50);vertical-align:middle;filter:grayscale(100%);-webkit-filter:grayscale(100%);-ms-filter:grayscale(100%);-o-filter:grayscale(100%);filter:gray;filter:url(data:image/svg+xml;utf8,<svg\ xmlns=\'http://www.w3.org/2000/svg\'><filter\ id=\'grayscale\'><feColorMatrix\ type=\'matrix\'\ values=\'0.3333\ 0.3333\ 0.3333\ 0\ 0\ 0.3333\ 0.3333\ 0.3333\ 0\ 0\ 0.3333\ 0.3333\ 0.3333\ 0\ 0\ 0\ 0\ 0\ 1\ 0\'/></filter></svg>#grayscale)}.sponsor:hover{filter:none;-webkit-filter:grayscale(0%);-ms-filter:grayscale(0%);-o-filter:grayscale(0%);-moz-transform:rotate(0);opacity:1;filter:alpha(opacity=1)}}@-webkit-keyframes spin {
 0% { -webkit-transform: rotate(0deg);}
 100% { -webkit-transform: rotate(360deg);}
 }@-moz-keyframes spin {
