--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -3074,7 +3074,7 @@ background-image: url("http://isblank.s3.amazonaws.com/2014/03/map2.png");
 }
 
 #content {
-background-color: #eff1f5;
+background-color: #252525;
 position: relative;
 top: -60px;    
 }
