--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -3177,6 +3177,12 @@ top: -25px;
 	color: #565656;
 }
 
+#title, #image, #location {
+	font-family: 'Roboto', sans-serif;
+	font-weight: 700;
+	font-size: 20px;
+	text-transform:uppercase;
+}
 
 input[type=file] {
 -webkit-appearance: textfield;
