--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -1421,7 +1421,7 @@ background-clip: padding-box;
 	float: left;
 }
 
-#main-content .entry-content {
+#main-content .entry-content, #comments {
     width: 50%;
     margin: auto;
 }
@@ -3203,3 +3203,8 @@ margin-left:10px;
 position: relative;
 padding: 3px 8px 2px;
 }
+
+.entry-content a {
+    color: #000000;
+    text-decoration: underline;
+}    
