--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -1232,7 +1232,7 @@ background-clip: padding-box;
 }
 
 #sidebar .widget {
-	border-bottom: 4px double #dbd9d4;
+	
 	padding: 20px;
 }
 
@@ -1434,7 +1434,6 @@ background-clip: padding-box;
 	overflow: hidden;
 	padding: 18px 0 11px;
 	margin: 0 0 3px;
-	border-bottom: 4px double #dbd9d4;
 }
 
 #main-content .post-meta.campaign-meta {
@@ -1819,6 +1818,7 @@ position: relative;
 	margin: 0 10px 2px;
 	float: left;
 	width: 360px;
+    background-color: #ffffff;
 }
 
 #comments .commentlist article {
@@ -1841,7 +1841,7 @@ position: relative;
 #comments .commentlist .comment-meta img {
 	float: left;
     padding: 0;
-    margin: 0 5px;
+    margin: 0 15px;
     -webkit-border-radius: 30px;
     border-radius: 30px;
 }
@@ -1874,6 +1874,7 @@ position: relative;
 
 #comments .commentlist .reply a {
 	color: #565656;
+    margin-right: 15px;
 }
 
 #comments .commentlist .reply span {
@@ -1930,7 +1931,6 @@ position: relative;
 .contact-campaign-author,
 .campaign-updates-title {
 	margin: 12px 0;
-	border-bottom: 4px double #dbd9d4;
 }
 
 .atcf-submit-campaign h3:first-child,
@@ -2148,7 +2148,7 @@ a.comment-edit-link {
 	color: #565656;
 	vertical-align: top;
 	line-height: 24px;
-	border-bottom: 4px double #dbd9d4;
+	
 	padding: 18px 0 14px;
 	margin-bottom: 30px;
 }
@@ -2392,7 +2392,7 @@ a.page-numbers:hover {
 	margin: 0 0 0.5em;
 	padding: 20px 0;
 	border-top: 4px double #dbd9d4;
-	border-bottom: 4px double #dbd9d4;
+	
 }
 
 #edd_checkout_form_wrap p#edd-anon-wrap {
@@ -2417,7 +2417,7 @@ a.page-numbers:hover {
 
 .single-reward-levels .edd_price_options li {
 	padding: 25px;
-	border-bottom: 4px double #dbd9d4;
+	
 }
 
 .single-reward-levels .edd_price_options.active li:not(.inactive):hover {
