--- a/wp-content/themes/isblank/style.css
+++ b/wp-content/themes/isblank/style.css
@@ -1155,9 +1155,8 @@ background-clip: padding-box;
 
 #projects .item img {
 	display: block;
-	min-width: 100%;
-	max-width: 100%;
-	height: 250px;
+	height: 252px;
+	width: auto;
 }
 
 #projects h3 {
@@ -1168,6 +1167,7 @@ background-clip: padding-box;
 	letter-spacing: 1px;
 	position: relative;
 	top: -90px;
+	text-shadow: 0 0 1px rgba(0,0,0,0.3),0 1px 1px rgba(0,0,0,0.3);
 }
 
 #projects p {
@@ -1493,6 +1493,10 @@ background-clip: padding-box;
 	margin: 0 0 24px;
 	margin: 0 0 1.714285714rem;
 	line-height: 20px;
+}
+
+.entry-content p {
+    text-shadow: 0 0 1px rgba(0,0,0,0.3),0 1px 1px rgba(0,0,0,0.3);
 }
 
 .entry-content ol,
